refactoring: 잡다한 코드 수정